# lcr_code

./: pyproject.toml
lcr_code/: __config.py  operaciones.py
